--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 body{
+	font-family: Arial;
 	background-color:grey;
 	margin-left: 15%;
 	margin-right: 15%;
@@ -7,26 +8,42 @@ body{
 
 #main {
 	width: 90%;
-	height: 100vh;
-	padding: 5vh 5% 5vh 5%;
+	height: 200vh;
+	/*padding: 5vh 5% 5vh 5%;*/
 	background-color: white;
+	box-shadow: 1px 1px 3px black;
 }
 
-h1,h2,h3{
+h1{
+	text-align: left;
+	color: White;
+	padding: 4vh 5% 0vh 5%;
+}
+
+.title{
+	width: 100%;
+	height: 15vh;
+	text-shadow: 1px 1px 2px black;
+	background-color: lightgray;
+	background-image: url("headBackground.jpg");
+}
+
+h2,h3{
 	text-align: center;
 }
 
 button {
-	background-color: white;
-	border: 2px solid red;
+	background-color: red;
+	border: 0px solid red;
 	padding: 1vh 2% 1vh 2%;
 	margin: 2vh 2% 2vh 2%;
 	min-width: 100px;
+	box-shadow: 1px 1px 3px black;
+	color: white;
 }
 
 button:hover {
-	background-color: red;
-	color: white;
+	background-color: FIREBRICK;
 }
 
 #roomSelect {
@@ -55,4 +72,13 @@ button:hover {
 	margin-right: auto;
 	text-align:center;
 	align-content:center;
+}
+#active{
+	background-color: FIREBRICK;
+}
+
+img {
+	width: 90%;
+	margin: 5% 5% 5% 5%;
+	box-shadow: 1px 1px 3px black;
 }
