--- a/main.css
+++ b/main.css
@@ -82,3 +82,10 @@ img {
 	margin: 5% 5% 5% 5%;
 	box-shadow: 1px 1px 3px black;
 }
+
+#reservations{
+	margin-left: auto;
+	margin-right: auto;
+	text-align:center;
+	align-content:center;	
+}
