--- a/main.css
+++ b/main.css
@@ -2,7 +2,8 @@ body{
 	font-family: Arial;
 	background-color:grey;
 	margin-left: 15%;
-	margin-right: 15%;
+	margin-right: 10%;
+	width: 75%;
 	margin-top: 5vh;
 }
 
